got graph but not pretty

--- a/style.css
+++ b/style.css
@@ -3,11 +3,21 @@ body
   background-color: tan;
 }
 
+svg
+{
+  background-color:orange;
+}
+
 rect
 {
   fill:cadetblue;
   opacity:.3;
   stroke: white;
+}
+
+circle
+{
+  opacity:2;
 }
 
 text {
